Wed May 12 19:59:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_type, check_sizeof): replace unusable characters.
	  [ruby-talk:99788]

Wed May 12 17:41:42 2004  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Config): make it configurable without
	  external file such as /etc/resolv.conf.

Wed May 12 14:37:27 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c: attribute value of DC (short name of
	  domainComponent) should be IA5String.

Wed May 12 13:20:19 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/composite.rb: improve configure methods (based on
	  the proposal of [ruby-talk:99671]).

Wed May 12 11:51:08 2004  Dave Thomas  <dave@pragprog.com>

	* class.c (rb_obj_singleton_methods): fix rdoc

Mon May 10 22:28:14 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb (each_crlf_line): remove junk line.

Mon May 10 21:44:42 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Change scheme for
	  looking up symbols in  HTML generator.

Mon May 10 16:45:21 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (eval): warning during eval should not cause deadlock.
	  [ruby-talk:98651]

	* eval.c (rb_eval): raise TypeError exception for superclass
	  mismatch.  [ruby-dev:39567]

Mon May 10 12:11:37 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Hack to search parents
	  for unqualified constant names.

Mon May 10 01:18:15 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb (loggin): append "\n".

Sun May  9 23:38:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/net/ftp.rb: ported documentation improvement from 1.8 branch

	* lib/net/imap.rb:   ditto

	* lib/net/pop.rb:    ditto

	* lib/net/smtp.rb:   ditto

	* lib/net/telnet.rb: ditto

Sun May  9 23:34:51 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/test_float.rb: added test_strtod to test Float("0").
